--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title> OpenTok Getting Started </title>
     <link href="css/app.css" rel="stylesheet" type="text/css">
-    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
+    <script src="js/tok.js"></script>
 </head>
 <body>
 
