--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     </div>
 
     <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.js"></script>
+<script>
+    var vConsole = new VConsole();
+</script> 
 </body>
 </html>
