--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="publisher"></div>
     </div>
 
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/app1.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.9.1/vconsole.min.js"></script>
 <script>
     var vConsole = new VConsole();
